:construction: This code need refactory, committing just to be able to revert

--- a/main/ESP32_main_sketch/data/style.css
+++ b/main/ESP32_main_sketch/data/style.css
@@ -169,3 +169,10 @@ button:disabled {
   +box-shadow: 0 1px #fff;
   cursor: not-allowed;
 }
+
+input:disabled, label.disabled {
+  opacity: 0.3;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  cursor: not-allowed;
+}
