:lipstick: Changed demo motor parameters

--- a/main/ESP32_main_sketch/data/style.css
+++ b/main/ESP32_main_sketch/data/style.css
@@ -1,8 +1,8 @@
 :root {
   --en-display: none;
   --it-display: auto;
-  --motors-enable-display: none;
-  --motors-disable-display: auto;
+  --motors-enable-display: auto;
+  --motors-disable-display: none;
 }
 
 .en {
